# dating

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-dev.sh
.github/workflows/: ci.yml  deploy.yml
app_src/: create_fastapi_app.py  main.py  run_main.py
app_src/actions/: create_superuser.py
app_src/alembic/versions/: 2024_12_11_0057-d9884ab7d5f0_add_users_and_access_token.py  2024_12_17_1437-6b95d304a7fb_add_matches_for_users.py  2024_12_18_1254-996f8afd9270_init.py  2024_12_18_1321-e36e1847b744_add_cascade_to_matches.py  2024_12_18_1424-fbe8e7b83af7_add_photo_for_user.py  2025_02_18_1646-761fb99593eb_add_name_surname_location.py  2025_04_29_1336-63c404d9de48_test.py  2025_08_19_1336-8bdbfd38d57a_refactor_interests.py  2025_08_22_0839-dc8995e00842_add_hidden_user_rating.py  2026_04_01_1200-a1b2c3d4e5f6_remove_gender_other.py  2026_04_01_1300-b2c3d4e5f6a7_add_blocks_and_reports.py  2026_04_02_1000-c3d4e5f6a7b8_add_telegram_id_to_users.py  2026_04_02_1100-d4e5f6a7b8c9_add_messages_table.py  2026_04_16_1131-db96f80addde_add_user_photos_table.py
app_src/api/: __init__.py
app_src/api/api_v1/: __init__.py  auth.py  chat.py  fastapi_users.py  interests.py  matches.py  users.py
app_src/api/dependencies/: access_tokens.py  strategy.py  user_manager.py  users.py
app_src/api/dependencies/authentication/: backend.py  strategy.py  user_manager.py
app_src/core/: config.py
app_src/core/authentication/: user_manager.py
app_src/core/models/: __init__.py  access_token.py  associations.py  block.py  enums.py  interest.py  match.py  message.py  report.py  user.py  user_photo.py
app_src/core/schemas/: block.py  interest.py  match.py  report.py  user.py
app_src/crud/: matches.py  users.py
app_src/crud/services/: block_report_service.py  cache_service.py  chat_service.py  connection_manager.py  interest_service.py  matches_service.py  notification_service.py  telegram_auth_service.py
app_src/docs/: matching_system.md
app_src/tests/: conftest.py  test_block_report_service.py  test_cache_service.py  test_chat_service.py  test_connection_manager.py  test_interest_service.py  test_matching_service.py  test_notification_service.py  test_password_validation.py  test_schemas.py  test_telegram_auth_service.py  test_user_model.py
bot/: Dockerfile  __main__.py  config.py  handlers.py  notifications.py
bot/tests/: test_handlers.py  test_notifications.py
docs/: cross-platform-plan.md
fastapi-application/: main.py
fastapi-application/alembic/versions/: 2024_12_05_1348-2949f100a02f_init_user.py  2024_12_05_1629-60f793ba6ab4_add_hashed_password_for_user.py  2024_12_11_0057-d9884ab7d5f0_add_users_and_access_token.py
fastapi-application/api/api_v1/: __init__.py  auth.py  users.py
fastapi-application/core/: config.py  redis_client.py  security.py
fastapi-application/core/dependencies/: auth.py
fastapi-application/core/models/: __init__.py  access_token.py  db_helper.py  enums.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/crud/: users.py
nginx/: nginx.conf
scripts/: backup-db.sh  init-ssl.sh  seed.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.js
web/src/: App.vue
web/src/api/: client.js
web/src/composables/: useTelegram.js
web/src/router/: index.js
web/src/stores/: auth.js
web/src/views/: ChatView.vue  HomeView.vue  LoginView.vue  MatchesView.vue  ProfileView.vue
